--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "core-js": "^3.11.0",
     "dayjs": "^1.10.4",
     "nuxt": "^2.15.4",
+    "vee-validate": "^3.4.7",
     "velocity-animate": "^1.5.2",
     "vue-feather-icons": "^5.1.0",
     "vue-good-table": "^2.21.10",
+    "vue-select": "^3.11.2",
     "vue-sweetalert2": "^4.3.1",
     "vue-tippy": "v4"
   },
